--- a/livres.html
+++ b/livres.html
@@ -164,23 +164,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 10
+    <!--Livre 10-->
     <figure>
-      <a href="https://www.amazon.fr/Itin%C3%A9raire-dun-avocat-hors-norme/dp/2755678127/ref=tmm_mmp_swatch_0?_encoding=UTF8&sr="
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/81AZ05xRcsL._SL1500_.jpg" alt="Itinéraire d'un avocat" class="books" /></a>
+      <a href="https://www.amazon.fr/Quand-lenchanteur-vint-monde-Chateaubriand/dp/2487819790/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3HALOGUVZ6U9X&dib=eyJ2IjoiMSJ9.JpFYMdHhjQL7QTHcZg3pdA.GSimIxqW5rJUZG0bejcpYAaM6brgt2rz5sXJe1F73GE&dib_tag=se&keywords=jean+d%27ormesson+quand+l%27enchanteur&qid=1759756180&sprefix=jean+d%27ormesson+quand+l%27enchanteur%2Caps%2C67&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/61Z5sAYfjmL._SL1171_.jpg" alt="Itinéraire d'un avocat" class="books" /></a>
       <figcaption>
-        Randall Schwerdorffer
+        Jean d'Ormesson
       </figcaption>
       <figcaption>
-        Itinéraire d'un avocat
+        Quand l'Enchanteur vint au monde
       </figcaption>
       <figcaption>
-        hors norme
+        18,50€
       </figcaption>
-      <figcaption>
-        7,90€
-      </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 11-->
     <figure>
@@ -7196,20 +7193,23 @@
       </figcaption>
     </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/Ne-c%C3%A8de-jamais-David-Goggins/dp/2221281071/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3T7S164CR8DAR&dib=eyJ2IjoiMSJ9.fj2_n8QT2OB1uMzTU2ngjVBwyimC6u2NZQ383wbB3lWsz-n6vnEFRJFLLOpoPxieGc1UIIohnQLa4ibKexcyslZ7mthjt1rXEIaO_twWP5iAsr_itDKBpMmTh9xZ3r4dAPXk9Uxf0m7WEffl1K6b7Q.YO5AqlbLKde3IWgxEZKc9KlIfVbog96jp8v2AMiiB1U&dib_tag=se&keywords=ne+cede+jamais&qid=1754667891&sprefix=ne+cede+jamais%2Caps%2C73&sr=8-1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/61P9XmczMIL._SL1255_.jpg" alt="... Mais la vie continue" class="books" /></a>
+      <a href="https://www.amazon.fr/Enqu%C3%AAte-archives-Freud-r%C3%A9els-pseudo-fantasmes/dp/2916032274/?_encoding=UTF8&pd_rd_w=T9aCt&content-id=amzn1.sym.2b647085-3f12-4ed1-8101-330d5a828c50&pf_rd_p=2b647085-3f12-4ed1-8101-330d5a828c50&pf_rd_r=257-0312289-7580746&pd_rd_wg=ajrLD&pd_rd_r=ab9d1416-847a-4062-92f4-67ed9eefd70e"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/91I-Dcb2+AL._SL1500_.jpg" alt="... Mais la vie continue" class="books" /></a>
       <figcaption>
-        David Goggins
+        Jeffrey Masson
       </figcaption>
       <figcaption>
-        Ne cède jamais
+        Enquête aux archives Freud:
       </figcaption>
       <figcaption>
-        21,90€
+        Des abus réels aux pseudo fantasmes
       </figcaption>
-    </figure>-->
+      <figcaption>
+        24,50€
+      </figcaption>
+    </figure>
 
     <!--Livre 99-->
     <figure>
@@ -7245,20 +7245,20 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Gianni-magnifique-St%C3%A9phanie-Horts/dp/222649894X/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=36X8S3A34V7QL&dib=eyJ2IjoiMSJ9.4bfdu6B7jYCcKVuYDalf3uzlS_4gyKzp24lYIoCdg5oTlhXl13MCP8rRTMqybN1XxdLBsPPUO7QNZJCtH0AgjHfD6eclRZm3la-5JAeQ1ATkDjNi1OjPz44Guo0-c-RWliG17hsluVa0Zwo-4N8_DQUPLEqhTi_m56SEYwUNXYRvUvF3sFispwYSg9ao9C9Z8k2_NVYmE33wNPy6hREd-bBX9PMAcuASofkEcDduvcuNfPsvLbOQJeXl-Yi40QgiLbXyk8twCOmaCdKlfH-dX5qDIVRXPzy7fJVMVNQjp-o.5uyMMPq5o5pvl0NUCzPAYxfdrRojzm0txvF29o1olDQ&dib_tag=se&keywords=gianni&qid=1754668183&sprefix=gianni%2Caps%2C86&sr=8-1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/71CAZ0F7iuL._SL1500_.jpg" alt="Derrière la porte verte" class="books" /></a>
+      <a href="https://www.amazon.fr/Inside-American-Education-Thomas-Sowell/dp/0743254082/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2HP35OZFTWYQD&dib=eyJ2IjoiMSJ9.rkzCh7oxC_MJNfv9XRK0b-LIoS2L4ZYGFFR6O-cRz3F-h4242tXzpWHSdJbDXbyOXxfq7iEW9mu5XtxxPf0WNnrarpY05zgcdVI3rqRa1YRIbMkubxw2-BUJvMNRpsMVKND-I78_tMzbBj_kBJ-myOHNRjcNLlb7-WHoT-LOK9o06O1tR7OiW7CvXkAxppA1wJ0YKEHdKPKjM0rcmjLACBgQVCf81xX8ZFizagh0Zl_xL00fWjuUAA44mobQdFLFESyYMlK9GBfsTeBa7RjnVIWSB6mwEcDKCaSDTaMRxEI.hUUDrMvi1wXo64mu74RG8fJQ84t6bFAF6he5QS5EEY8&dib_tag=se&keywords=inside+american+education&qid=1759756075&sprefix=inside+american+educaiton%2Caps%2C75&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/71oVidUbVHL._SL1500_.jpg" alt="Derrière la porte verte" class="books" /></a>
       <figcaption>
-        Stéphanie des Horts
+        Thomas Sowell
       </figcaption>
       <figcaption>
-        Gianni le magnifique
+        Inside American Education
       </figcaption>
       <figcaption>
-        21,90€
+        26,99€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 98-->
     <figure>
@@ -7399,52 +7399,52 @@
       </figcaption>
     </figure>
 
-    <!--Livre 99
+    <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Messy-Kitchen-Deliciously-Fabulously-Copiously/dp/1682619389/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=renee+paquette&qid=1623591705&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81d-hgRC2eL.jpg" alt="Renee Paquette cuisine" class="books" /></a>
+      <a href="https://www.amazon.fr/Chaos-Truth-Behind-Manson-Murders/dp/1786090627/ref=sr_1_1?crid=2NUCNIHND9CKA&dib=eyJ2IjoiMSJ9.Vdpuqe0XBMkDOaFG75daXqg08WeAwNgFukxEGg_zYGijYq32FRRZVp8kD8qvL-7YJJ-4GHTg4AFiAHvb9WXC9EHpN7aD7I8gKD-Sx5eWxVc.V0agm7eFjI8pXonmLDGrXgUL7EoN4tB4f9SJcT3MaFo&dib_tag=se&keywords=chaos+tom+o%27neill&qid=1759756001&sprefix=chaos+tom%2Caps%2C84&sr=8-1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/81Z7g8tmPKL._SL1500_.jpg" alt="Renee Paquette cuisine" class="books" /></a>
       <figcaption>
-        Renee Paquette
+        Tom O'Neill
       </figcaption>
       <figcaption>
-        Messy In The Kitchen
+        Chaos: The Truth Behind the Manson Murders
       </figcaption>
       <figcaption>
-        23,56€
+        11,94€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 100
+    <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/grand-livre-boxe-Jean-Philippe-Lustyk/dp/2501147480/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jean+philippe+lustyk&qid=1628339153&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71RMGDC-AXL.jpg" alt="Le grand livre de la boxe" class="books" /></a>
+      <a href="https://www.amazon.fr/football-selon-Daniel-pr%C3%A9ciser/dp/2501193520/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2LVCGEL8COX7K&dib=eyJ2IjoiMSJ9.zQKmh36Wet4u7WIFZBNRxQ.tUeB1Fr0fWXiXGBejbIez0VZxJsGI3WaM8pqC-boCac&dib_tag=se&keywords=Le+football+selon+moi+de+Daniel+Riolo&qid=1759755874&sprefix=le+football+selon+moi+de+daniel+riolo%2Caps%2C104&sr=8-1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/51SL9y9QO2L._SL1500_.jpg" alt="Le grand livre de la boxe" class="books" /></a>
       <figcaption>
-        Jean-Phillipe Lustyk
+        Daniel Riolo
       </figcaption>
       <figcaption>
-        Le grand livre de la boxe
+        Le football selon moi
       </figcaption>
       <figcaption>
-        35,00€
+        19,90€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Derri%C3%A8re-porte-verte-Bernard-LIONS/dp/226317463X/ref=msx_wsirn_v1_3?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=226317463X&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/41by02c4o7L.jpg" alt="Derrière la porte verte" class="books" /></a>
+      <a href="https://www.amazon.fr/Document-2025-Jordan-Bardella/dp/2213733635/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3OPEKHRTAOT8D&dib=eyJ2IjoiMSJ9.-OrlEJK_G_36OYkKEu8NjXGWUOU1XKncslxeYqBGi6pA_LzEmDOT-NL7KhGxIXRNl7E30-7VCc1q1dn02KKsxxx760hVvJ-NTATuPFSnXWDLQcXDqYkC-d3zXdGDVdZHp5ZfFNtp43c97ZR_wZGrcy5MzeBiR_zLG4X2ZX8dmZKQe4YcnRQg5zzgU2c71duPDJRzmaTdIowyWaoYm71vuA2cVV_2qcSk3KE_mZKIpIR3WvfeQuR6QNY_8nmjGIyGhIS8yOLYQa5cn58GWoOrsn5V_dKAtQgSxFZLO1Rb_C4.IQRavL4R0RdUVQ3Fwzz899Rpsdv9SU2WvdDELsv9F7k&dib_tag=se&keywords=Jordan+Bardella&qid=1759755884&sprefix=jordan+bardella%2Caps%2C78&sr=8-2"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/71Okv3dnVEL._SL1500_.jpg" alt="Derrière la porte verte" class="books" /></a>
       <figcaption>
-        Bernard Lions
+        Jordan Bardella
       </figcaption>
       <figcaption>
-        Derrière la porte verte
+        Ce que veulent les Français
       </figcaption>
       <figcaption>
-        17,90€
+        23,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 98
     <figure>
@@ -7459,7 +7459,7 @@
       <figcaption>
         19,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 99
     <figure>
