--- a/religion.html
+++ b/religion.html
@@ -148,23 +148,20 @@
   </div>
 
   <div class="gamesLine">
-    <!--Jeu 1
+    <!--Jeu 1--->
     <figure>
-      <a href="https://www.amazon.fr/foi-nest-pas-bonbon-miel/dp/2728926964/ref=sr_1_2?crid=R0CKEG8RFMW5&dib=eyJ2IjoiMSJ9.TTIc16jh6Ej9snk-rb1ARmnvok5LOEur_g0rcSvHoMblBDtqtVtGOKP3OpXp8VKPTWTCWyyRvbNJ9DjUFcb4BPwU7J6P5GnaP2j-TKv08TmRu8Xutp1h4asf5zNoOc4cSnb9QCKBpyYRIZr8TnurkB0xFSZG0tsAmJSpY2z4czYYXz5ol6iadF0LA6FrGC72r9JbgyUcH83HgoYnqYvuRuJqRJbfvc6Fqd-aKr-pPtQkZeYIQt2YnXSUB-mZYmxBC767-Q7KKHofCuqmZyYUXZGnF8SpQBqq0pO5tazi_3tg1Sv-NdYbENKiAvsphcP-Md-zHNY2dPX_ZTjcMZP0rAgePGcuUx4u8JWM_VaKVXft3Fhp9zbgZYUeYKhrN5y07ib6BP7BLwIUwGoBORrSloMlJIVDeNtBJlhoF__zh-QQ1LI5B0Hnmzv-iVRc2COy.4tq4MKXE4f9b7ttjTa7MZxHcdr6ytVIceJCjLXnum9g&dib_tag=se&keywords=luigi+maria+epicoco&nsdOptOutParam=true&qid=1736339816&sprefix=luigi+maria+e%2Caps%2C119&sr=8-2"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/81WEM54cCeL._SL1500_.jpg" alt="La foi n'est pas un bonbon au miel" class="books" /></a>
+      <a href="https://www.amazon.fr/2050-Robert-Sarah/dp/2213725187/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2308DKB2F0LCS&dib=eyJ2IjoiMSJ9.ZybkqIHP9yOO3XCpvvubbQ.sJpcpigLxIm9wUbb9ATitWsr75rznFgXZcXS1RLjifc&dib_tag=se&keywords=2050+de+Robert+Sarah&qid=1759755895&sprefix=2050+de+robert+sarah%2Caps%2C80&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/71LXCgDvHLL._SL1500_.jpg" alt="La foi n'est pas un bonbon au miel" class="books" /></a>
       <figcaption>
-        Luigi Maria Epicoco
+        Cardinal Robert Sarah
       </figcaption>
       <figcaption>
-        La foi n'est pas
+        2050
       </figcaption>
       <figcaption>
-        un bonbon au miel
+        22,90€
       </figcaption>
-      <figcaption>
-        14,90€
-      </figcaption>
-    </figure>--->
+    </figure>
 
     <!--Jeu 2--->
     <figure>
