--- a/livres.html
+++ b/livres.html
@@ -7446,18 +7446,21 @@
       </figcaption>
     </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/vie-continue-Bernard-Pivot/dp/2226451323/ref=msx_wsirn_v1_2?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=2226451323&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/71RcLpRTVaL.jpg" alt="... Mais la vie continue" class="books" /></a>
+      <a href="https://www.amazon.fr/Jacques-Monclar-Bonjour-racont%C3%A9e-Reverchon/dp/2757606654/ref=sr_1_1?crid=1B8IYK83R5U20&dib=eyJ2IjoiMSJ9.4zpDt5TX8XQurdhkjGVpEKJWe16p6RLrobqtN0Ohd1bNMmtu3ysBpPphFktuThRv.KvnGKstwgFB959bu9UYiAOAQ7-X4UVfH-4mHSO8H5RE&dib_tag=se&keywords=jacques+monclar&qid=1759761277&sprefix=jacques+mon%2Caps%2C166&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/71FgSDzUJBL._SL1500_.jpg" alt="... Mais la vie continue" class="books" /></a>
       <figcaption>
-        Bernard Pivot
+        Jacques Monclar
       </figcaption>
       <figcaption>
-        ... Mais la vie continue
+        Bonjour, Bonsoir:
       </figcaption>
       <figcaption>
-        19,90€
+        Mes vies racontées à Rémi Reverchon
+      </figcaption>
+      <figcaption>
+        19,50€
       </figcaption>
     </figure>
 
