--- a/livres.html
+++ b/livres.html
@@ -149,7 +149,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 9-->
+    <!--Livre 9
     <figure>
       <a href="https://www.amazon.fr/Churchill-%C3%A9dition-luxe-Andrew-Roberts/dp/2262097488/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1605651658&sr=8-1" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/61XvcwjjMdL.jpg" alt="Churchill" class="books" /></a>
@@ -162,7 +162,7 @@
       <figcaption>
         35,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 10-->
     <figure>
