--- a/livres.html
+++ b/livres.html
@@ -7322,7 +7322,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 98-->
+    <!--Livre 98
     <figure>
       <a href="https://www.amazon.fr/Jur%C3%A9-crach%C3%A9-%C3%89ric-Dupond-Moretti/dp/2749961904/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3CI2Z9QJ8J5TI&dib=eyJ2IjoiMSJ9.5__YdVQrSiwXhVVU_1bj3C6hUJmU3jghTqLoVbLO9iOnp-ePQ9GTq1Wll7d0ok7m6brEyIWjTip65j7sPxj1Re3LRrYiSHOm-Kj9D6nFaHbz9NxRcOe7rHwh8a9gtLKZ4nhs50Br1kERSboYTFJlhDDCSWBEI3UMOyJTab-SIYD_Y-LJCCePBG44zciKKTzP5XypSzw5Ih3tvbxrE-PcYdeMR-5-WGnXvVsbMCANH3JjGdEMZ4ZFz3pTuwUqWgA3nJ-GR6YHxgFCVl3NRH9TnUDL5kxt2npc9kOu79reM7w.5yFqbw5BKKg-stZ725aH3WovJQ6Z033mSFK8jvWx_-Y&dib_tag=se&keywords=jur%C3%A9+crach%C3%A9&qid=1758718269&sprefix=jur%C3%A9+crach%2Caps%2C90&sr=8-1"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/61l2hEMQARL._SL1285_.jpg" alt="... Mais la vie continue" class="books" /></a>
@@ -7335,7 +7335,7 @@
       <figcaption>
         21,95€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 99-->
     <figure>
