maj after et mug

--- a/autres.html
+++ b/autres.html
@@ -36,32 +36,32 @@
       </figcaption>
     </figure>
 
-    <!--Autres 2
+    <!--Autres 2-->
     <figure>
-      <a href="https://www.amazon.fr/PlayStation-Death-Stranding-Aventure-Physique/dp/B0F194FJTD" target="_blank"> <img
-          src="https://m.media-amazon.com/images/I/81vphzNTvvL._AC_SL1500_.jpg" alt="Tumblr Gotaga" class="others" /></a>
+      <a href="https://www.amazon.fr/dossiers-After-Foot-Trashtalk-langue/dp/2501193482/ref=pd_rhf_se_s_pd_crcd_d_sccl_2_1/257-0312289-7580746?pd_rd_w=znwwY&content-id=amzn1.sym.c66e171c-f695-4e60-8448-759139288a77&pf_rd_p=c66e171c-f695-4e60-8448-759139288a77&pf_rd_r=93MG72YYYM65QD3145Z6&pd_rd_wg=tH6jE&pd_rd_r=69082e59-da2e-40b4-97a9-eb4840094197&pd_rd_i=2501193482&psc=1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/912MzDBvMxL._SL1500_.jpg" alt="Tumblr Gotaga" class="others" /></a>
       <figcaption>
-        Death Stranding 2
+        Les dossiers After Foot
       </figcaption>
       <figcaption>
-        64,99€
+        Numéro 2 : Trashtalk
       </figcaption>
-    </figure>-->
+      <figcaption>
+        14,90€
+      </figcaption>
+    </figure>
 
-    <!--Autres 3
+    <!--Autres 3-->
     <figure>
-      <a href="https://www.decathlon.be/fr/p/mp/thor-athletics/sangles-de-levage-sangle-de-tirage-musculation-grip-supplementaire-camel/_/R-p-a3e93c99-2cb4-47a3-bb26-181453d1f759?mc=a3e93c99-2cb4-47a3-bb26-181453d1f759_c1c4&c=noir_blanc"
-        target="_blank"> <img src="https://contents.mediadecathlon.com/m16316325/k$1fa7c58195bd6af8b743bceb3f315831/sq/sangles-de-levage-sangle-de-tirage-musculation-grip-supplementaire-noir.jpg?format=auto&f=1200x1200" alt="Gotaga" class="others" /></a>
+      <a href="https://sliggy-shop.fourthwall.com/en-eur/products/original-slug-mug"
+        target="_blank"> <img src="https://imgproxy.fourthwall.com/OO_WMdhEQOf-cOG_IV16JHHcZrO_W5DDKzWiGiMYc6Q/w:1920/sm:1/enc/PaYTFjp1Ih3jjyt1/gai2XpZKi0sZSgP3/gM73Y9AeZ33Zh4bZ/XBA-Ka6qFagLf0Hf/sXHdr_MsBuYVz-Iw/u6EDVQ9e5f-GvZe3/vAhW38T1N58bPakx/HefGj2BOg87bPxUt/0RzyKK3ZZoLXkOR6/_FJQpDf8fkCrppkJ/NcwVvuYf4ZKG_E1R/IP-tcyP2nFzqHIwh/rz3HTt-5CU0zt6P2/UnKKuiuDCzhgOTWw/Lw6Qr_o4KHM" alt="Gotaga" class="others" /></a>
       <figcaption>
-        Sangles de levage
+        Mug Sliggy
       </figcaption>
       <figcaption>
-        Couleur Noir et Blanc Ultra (3eme choix)
+        13,19€
       </figcaption>
-      <figcaption>
-        17,95€
-      </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Autres 4
     <figure>
